fix github link z-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,6 @@ body {
     opacity: 0.7;
     transition: .5s;
     animation: pulse 4s ease 0s infinite normal forwards;
-    z-index: -1;
 }
 
 .main-content {
